# rust_practice

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: github-actions-badge.user.js  rust.yml
heat_eq/: main.rs
ode_euler/: Cargo.toml  basic_tests.rs  tools.rs
ode_euler/src/: basic_tests.rs  main.rs  tools.rs
